Updated main menu for use with screen readers Updated unit tests for rstats_utils Updated all modules so that dock would not be closable Disabled "disabling" of execute function.  Will focus in on error when pressed

--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -429,6 +429,9 @@
    <addaction name="menu_Help"/>
   </widget>
   <widget class="QDockWidget" name="m_dockSampleEditor">
+   <property name="features">
+    <set>QDockWidget::NoDockWidgetFeatures</set>
+   </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
