--- a/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
+++ b/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
@@ -44,11 +44,11 @@
 {
 color:black;
 padding:4px;
-background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgba(85, 85, 127, 255), stop:1 rgba(255, 255, 255, 255));
+background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgba(105, 105, 127, 255), stop:1 rgba(255, 255, 255, 255));
 }</string>
           </property>
           <property name="text">
-           <string>TextLabel</string>
+           <string>Categories</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -84,11 +84,11 @@ background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgb
 {
 color:black;
 padding:4px;
-background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgba(85, 85, 127, 255), stop:1 rgba(255, 255, 255, 255));
+background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0, stop:0 rgba(105, 105, 127, 255), stop:1 rgba(255, 255, 255, 255));
 }</string>
           </property>
           <property name="text">
-           <string>TextLabel</string>
+           <string>Modules</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
