--- a/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
+++ b/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1024</width>
+    <width>1179</width>
     <height>768</height>
    </rect>
   </property>
@@ -333,17 +333,7 @@
             <number>6</number>
            </property>
            <item>
-            <widget class="QDoubleSpinBox" name="m_spnSeed">
-             <property name="decimals">
-              <number>16</number>
-             </property>
-             <property name="minimum">
-              <double>0.000000000000000</double>
-             </property>
-             <property name="maximum">
-              <double>9999999999.000000000000000</double>
-             </property>
-            </widget>
+            <widget class="QLineEdit" name="m_txtSeed"/>
            </item>
           </layout>
          </widget>
@@ -367,9 +357,9 @@
             <number>6</number>
            </property>
            <item>
-            <widget class="QSpinBox" name="m_spnOrder">
-             <property name="maximum">
-              <number>100000</number>
+            <widget class="QLineEdit" name="m_txtOrder">
+             <property name="placeholderText">
+              <string>0</string>
              </property>
             </widget>
            </item>
@@ -395,9 +385,9 @@
             <number>6</number>
            </property>
            <item>
-            <widget class="QSpinBox" name="m_spnSpares">
-             <property name="maximum">
-              <number>100000</number>
+            <widget class="QLineEdit" name="m_txtSpares">
+             <property name="placeholderText">
+              <string>0</string>
              </property>
             </widget>
            </item>
@@ -423,12 +413,9 @@
             <number>6</number>
            </property>
            <item>
-            <widget class="QSpinBox" name="m_spnLowNumber">
-             <property name="minimum">
-              <number>-999999999</number>
-             </property>
-             <property name="maximum">
-              <number>999999999</number>
+            <widget class="QLineEdit" name="m_txtLowNumber">
+             <property name="placeholderText">
+              <string>0</string>
              </property>
             </widget>
            </item>
@@ -454,12 +441,9 @@
             <number>6</number>
            </property>
            <item>
-            <widget class="QSpinBox" name="m_spnHighNumber">
-             <property name="minimum">
-              <number>-999999999</number>
-             </property>
-             <property name="maximum">
-              <number>999999999</number>
+            <widget class="QLineEdit" name="m_txtHighNumber">
+             <property name="placeholderText">
+              <string>0</string>
              </property>
             </widget>
            </item>
@@ -537,7 +521,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1024</width>
+     <width>1179</width>
      <height>20</height>
     </rect>
    </property>
@@ -658,11 +642,11 @@
  <tabstops>
   <tabstop>m_txtAuditName</tabstop>
   <tabstop>m_grpCustomSeed</tabstop>
-  <tabstop>m_spnSeed</tabstop>
-  <tabstop>m_spnOrder</tabstop>
-  <tabstop>m_spnSpares</tabstop>
-  <tabstop>m_spnLowNumber</tabstop>
-  <tabstop>m_spnHighNumber</tabstop>
+  <tabstop>m_txtSeed</tabstop>
+  <tabstop>m_txtOrder</tabstop>
+  <tabstop>m_txtSpares</tabstop>
+  <tabstop>m_txtLowNumber</tabstop>
+  <tabstop>m_txtHighNumber</tabstop>
   <tabstop>m_chkXLSOutput</tabstop>
   <tabstop>m_chkCSVOutput</tabstop>
   <tabstop>m_chkTextOutput</tabstop>
