--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -222,15 +222,9 @@
          <number>11</number>
         </property>
         <item>
-         <widget class="QSpinBox" name="m_spnUniverseSize">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>999999999</number>
-          </property>
-          <property name="value">
-           <number>1</number>
+         <widget class="QLineEdit" name="m_txtUniverseSize">
+          <property name="placeholderText">
+           <string>0</string>
           </property>
          </widget>
         </item>
@@ -724,7 +718,6 @@
  </widget>
  <tabstops>
   <tabstop>m_txtAuditName</tabstop>
-  <tabstop>m_spnUniverseSize</tabstop>
   <tabstop>m_rdbExamined</tabstop>
   <tabstop>m_rdbAudited</tabstop>
   <tabstop>m_rdbDifference</tabstop>
